# DataSet_RAG

./: .env.example  .gitignore  README.md  pyproject.toml
app/clients/: course_utils.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  reranker_utils.py
app/conf/: milvus_config.py  minio_config.py
app/core/: load_prompt.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/import_process/page/: import.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
app/query_process/page/: chat.html
app/query_process/utils/: attachment_utils.py  exam_structure_analyzer.py
app/utils/: task_utils.py
evals/: custom_metrics.py  import_sample_docs.py  ragas_eval.py  run_rag_eval.py  summarize_eval.py
evals/datasets/: calculation_methods_eval.jsonl
prompts/: answer_out.prompt  course_query_rewrite.prompt  exam_generation.prompt  rewritten_query_and_itemnames.prompt
scripts/: dev_start.ps1  health_check.py
