[project]
name = "dataset-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.37.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pymilvus[model]>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "regex>=2026.5.9",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "uvicorn[standard]>=0.47.0",
    "transformers>=4.57.6",
    "openai-agents>=0.4.2",
]
