[project]
name = "dataset-rag"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.117",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.37.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pymilvus[model]>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "regex>=2026.5.9",
    "torch>=2.6,<2.8",
    "torchaudio>=2.6,<2.8",
    "torchvision>=0.21,<0.23",
    "uvicorn[standard]>=0.30,<0.35",
    "transformers>=4.57.6",
    "openai-agents>=0.4.2",
    "ragas>=0.4.3",
    "datasets>=4.8.5",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
